--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "build": "mkdir -p dist && cp -r public app.js package.json dist/"
   },
   "dependencies": {
     "express": "^4.18.0"
